--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/" target="_self">Blog</a>
+            <!--<a href="{{ site.baseurl }}/" target="_self">Blog</a>-->
             <!--<a href="{{ site.baseurl }}/about" target="_self">About</a>-->
           </nav>
         </header>
