--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/about" target="_blank">About</a>
+            <a href="https://transitioning-to-industry.org/" target="_self">Home</a>
           </nav>
         </header>
       </div>
