Fixing formatting issues in the new post.

--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,4 @@
----
----
-
-//
+--- --- //
 // IMPORTS
 //
 
@@ -18,7 +15,7 @@ html {
 }
 
 body {
-	background: $white;
+  background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -30,7 +27,12 @@ body {
   width: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
   font-weight: bold;
@@ -46,6 +48,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 30px;
+
   a {
     color: inherit;
   }
@@ -71,13 +74,16 @@ p {
 a {
   color: $blue;
   text-decoration: none;
-	cursor: pointer;
-  &:hover, &:active {
+  cursor: pointer;
+
+  &:hover,
+  &:active {
     color: $blue;
   }
 }
 
-ul, ol {
+ul,
+ol {
   margin: 15px 0;
   padding-left: 30px;
 }
@@ -90,19 +96,25 @@ ol {
   list-style-type: decimal;
 }
 
-ol ul, ul ol, ul ul, ol ol {
+ol ul,
+ul ol,
+ul ul,
+ol ol {
   margin: 0;
 }
 
-ul ul, ol ul {
+ul ul,
+ol ul {
   list-style-type: circle;
 }
 
-em, i {
+em,
+i {
   font-style: italic;
 }
 
-strong, b {
+strong,
+b {
   font-weight: bold;
 }
 
@@ -114,19 +126,19 @@ img {
 //img { 
 //  display: block; 
 //} 
-img.wrap { 
-  max-width: 70%; 
-  margin: 30px 0px; 
-} 
-img.align-right 
-{ 
-  float: right; 
-  margin-left: 30px; 
-} 
-img.align-left 
-{ 
-  float: left; 
-  margin-right: 30px; 
+img.wrap {
+  max-width: 70%;
+  margin: 30px 0px;
+}
+
+img.align-right {
+  float: right;
+  margin-left: 30px;
+}
+
+img.align-left {
+  float: left;
+  margin-right: 30px;
 }
 
 
@@ -145,6 +157,7 @@ img.align-left
   color: $black;
   background: $lightGray;
 }
+
 ::selection {
   color: $black;
   background: $lightGray;
@@ -154,12 +167,12 @@ img.align-left
 // http://nicolasgallagher.com/micro-clearfix-hack/
 .clearfix:before,
 .clearfix:after {
-    content: " ";
-    display: table;
+  content: " ";
+  display: table;
 }
 
 .clearfix:after {
-    clear: both;
+  clear: both;
 }
 
 
@@ -262,12 +275,12 @@ nav {
 // .main
 //
 
-.posts > .post {
+.posts>.post {
   padding-bottom: 2em;
   border-bottom: 1px solid $lightGray;
 }
 
-.posts > .post:last-child {
+.posts>.post:last-child {
   padding-bottom: 1em;
   border-bottom: none;
 }
@@ -320,4 +333,12 @@ pre {
 
 div.sourceCode {
   overflow: hidden;
+}
+
+// Formatting of math
+code.has-jax {
+  font: inherit;
+  font-size: 100%;
+  background: inherit;
+  border: inherit;
 }
