--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-  <!--<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css"/>-->
-  <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}" />
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+  <!-- <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}" />-->
   <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}"
     href="{{ site.baseurl }}/feed.xml" />
 
