--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="title" content="Transitioning to Industry | Skills for PhDs Transitioning to Industry">
+  <meta name="description"
+    content="Explore my journey as an academic looking to transition to industry roles. Empower your career shift.">
+  <meta name="keywords"
+    content="PhD to industry, academic career transition, industry roles, job search, professional development">
+  <meta name="author" content="Transitioning to Industry">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#2a5d84">
   <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
   {% include meta.html %}
