--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,9 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-  <!-- <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}" />-->
   <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}"
     href="{{ site.baseurl }}/feed.xml" />
-  <meta charset="UTF-8">
+  <!--  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="title" content="Transitioning to Industry | Skills for PhDs Transitioning to Industry">
   <meta name="description"
@@ -15,7 +14,7 @@
     content="PhD to industry, academic career transition, industry roles, job search, professional development">
   <meta name="author" content="Transitioning to Industry">
   <meta name="robots" content="index, follow">
-  <meta name="theme-color" content="#2a5d84">
+  <meta name="theme-color" content="#2a5d84">-->
   <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
   {% include meta.html %}
