--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+  <!--<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />-->
+  <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}"
     href="{{ site.baseurl }}/feed.xml" />
   <!--  <meta charset="UTF-8">
